[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langasync"
version = "0.1.0"
description = "Async API integration library for multiple providers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "langchain-core>=1.0,<2.0",
    "cloudpickle>=3.0,<4.0",
    "httpx>=0.25.0,<1.0",
    "langchain-anthropic>=1.0,<2.0"
]

[tool.setuptools.packages.find]
include = ["langasync*"]
exclude = ["plans*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-dotenv>=0.5",
    "pytest-httpx>=0.30",
    "python-dotenv>=1.0",
    "black>=23.0",
    "ruff>=0.1",
    "langchain-openai>=1.0,<2.0",
    "openai>=2.0,<3.0",
    "anthropic>=0.20,<1.0",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--ignore=tests/integration"
env_files = [".env"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = ".venv"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv"]

[tool.mypy]
packages = ["langasync"]
ignore_missing_imports = false
disallow_untyped_defs = true
exclude = [".venv", "examples", "tests"]

